force-app/main/default/objects/Field_Log_Field__c/Field_Log_Field__c.object-meta.xml
<CustomObject>
    <description>Field-level selection (child of Field Log Config) specifying which fields to track.</description>
    <label>Field Log Field</label>
    <nameField>
        <displayFormat>FLF-{00000000}</displayFormat>
        <label>Field Log Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Log Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>