force-app/main/default/objects/Field_Log_Field__c/fields/Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Api_Name__c</fullName>
    <description>API name of the field to track.</description>
    <label>Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>