force-app/main/default/objects/Field_Log_Field__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>Display label of the field to track.</description>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>