force-app/main/default/objects/Field_Log_Field__c/fields/Field_Log_Config__c.field-meta.xml
<CustomField>
    <fullName>Field_Log_Config__c</fullName>
    <description>Parent Field Log Config.</description>
    <label>Field Log Config</label>
    <referenceTo>Field_Log_Config__c</referenceTo>
    <relationshipLabel>Field Log Fields</relationshipLabel>
    <relationshipName>Field_Log_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>