force-app/main/default/objects/Field_Log_Field__c/fields/Mask_Value__c.field-meta.xml
<CustomField>
    <fullName>Mask_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PII masking: store a hash instead of the raw value.</description>
    <label>Mask Value</label>
    <type>Checkbox</type>
</CustomField>