force-app/main/default/objects/Field_Log_Field__c/fields/Track_Old_New__c.field-meta.xml
<CustomField>
    <fullName>Track_Old_New__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Capture both old and new values.</description>
    <label>Track Old/New</label>
    <type>Checkbox</type>
</CustomField>